@@ -20,6 +20,7 @@
 .B ub_ctx_config,
 .B ub_ctx_set_fwd,
 .B ub_ctx_set_stub,
+.B ub_ctx_set_tls,
 .B ub_ctx_resolvconf,
 .B ub_ctx_hosts,
 .B ub_ctx_add_ta,
@@ -70,6 +71,9 @@
 \fIchar*\fR addr,
 .br
 		\fIint\fR isprime);
+.LP
+\fIint\fR
+\fBub_ctx_set_tls\fR(\fIstruct ub_ctx*\fR ctx, \fIint\fR tls);
 .LP
 \fIint\fR
 \fBub_ctx_resolvconf\fR(\fIstruct ub_ctx*\fR ctx, \fIchar*\fR fname);
@@ -224,6 +228,12 @@ IP4 or IP6 address.  If the address is NULL the stub entry is removed.
 Set isprime true if you configure root hints with it.  Otherwise similar to
 the stub zone item from unbound's config file.  Can be called several times,
 for different zones, or to add multiple addresses for a particular zone.
+At this time it is only possible to set configuration before the
+first resolve is done.
+.TP
+.B ub_ctx_set_tls
+Enable DNS over TLS (DoT) for machines set with 
+.B ub_ctx_set_fwd.
 At this time it is only possible to set configuration before the
 first resolve is done.
 .TP
